Fixed map size making scrolling impossible on mobile

--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -2,15 +2,25 @@ body.index #location {
   background-color:                       $dark-gray;
   @include light-on-dark;
   color:                                  #ffffff;
-  padding:                                0;
+  padding:                                0 $base-line-height;
+
+  $map-height:                            60vh;
+
+  @media screen and (min-height: 440px) { // 440 corresponds to $hero-height, the min height of the map
+    padding:                                0;
+  }
 
   #location-list {
     display:                              none;
   }
 
-  @media screen and (min-width: $grid-min-width ) {
+  .wrapper {
     min-height:                             30vh;
+    box-sizing:                             border-box;
+  }
 
+
+  @media screen and (min-width: $grid-min-width ) {
     #location-list {
       @include reset-list;
       @include justify-content( space-around );
@@ -41,7 +51,7 @@ body.index #location {
 
   #map {
     width:                                100%;
-    height:                               400px;
+    height:                               $map-height;
     min-height:                           $hero-height;
   }
 }
